[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "certovus"
version = "0.1.0"
description = "Let's Encrypt certificate broker for embedded devices"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "gunicorn>=21.0",
    "acme>=2.10",
    "cryptography>=42.0",
    "josepy>=1.14",
    "dnspython>=2.6",
    "cloudflare>=3.0",
    "click>=8.1",
    "requests>=2.31",
]

[project.scripts]
certovus = "tools.admin_cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["broker*", "tools*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
